fix: post가x축overflow되는 현상 해결

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -5,6 +5,7 @@
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-rgb: 249, 249, 243;
+  overflow-x: hidden;
   /**
    * css for terra-design-system
    */
